--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,12 +1,12 @@
 .container {
   padding-left: 15px;
   padding-right: 15px;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
-    margin: 0 auto;
   }
 }
 
@@ -21,3 +21,6 @@
     width: 1200px;
   }
 }
+
+// margin-left: auto;
+// margin-right: auto;
