--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,57 +1,57 @@
-// .footer-form {
-//   display: block;
-// }
+.footer-form {
+  display: block;
+}
 
-// .footer-form__head {
-//   margin-bottom: 20px;
-//   font-weight: 700;
-//   @include font(14px, 1.14, 0.03em);
+.footer-form__head {
+  margin-bottom: 20px;
+  font-weight: 700;
+  @include font(14px, 1.14, 0.03em);
 
-//   text-transform: uppercase;
+  text-transform: uppercase;
 
-//   color: var(--second-color);
-// }
+  color: var(--second-color);
+}
 
-// .footer-form__input {
-//   width: 358px;
-//   height: 50px;
-//   padding-left: 16px;
+.footer-form__input {
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
 
-//   background-color: transparent;
-//   border: 1px solid rgba(255, 255, 255, 0.3);
-//   box-sizing: border-box;
-//   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-//   border-radius: 4px;
-//   color: var(--second-color);
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  color: var(--second-color);
 
-//   &::placeholder {
-//     display: flex;
-//     align-items: center;
-//     @include font(16px, 1.25, 0.03em);
+  &::placeholder {
+    display: flex;
+    align-items: center;
+    @include font(16px, 1.25, 0.03em);
 
-//     color: rgba(255, 255, 255, 0.6);
-//   }
-// }
+    color: rgba(255, 255, 255, 0.6);
+  }
+}
 
-// .footer-form__btn {
-//   padding: 10px 29px;
-//   margin-left: 12px;
-//   background-color: var(--accent-color);
-//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-//   border-radius: 4px;
-//   border: none;
+.footer-form__btn {
+  padding: 10px 29px;
+  margin-left: 12px;
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
 
-//   text-align: center;
-//   font-weight: 700;
-//   @include font(16px, 1.88, 0.06em);
+  text-align: center;
+  font-weight: 700;
+  @include font(16px, 1.88, 0.06em);
 
-//   color: var(--second-color);
-// }
+  color: var(--second-color);
+}
 
-// .footer-form__icon {
-//   width: 24px;
-//   height: 24px;
-//   vertical-align: middle;
-//   margin-left: 4px;
-//   fill: var(--second-color);
-// }
+.footer-form__icon {
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+  margin-left: 4px;
+  fill: var(--second-color);
+}
