--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -3,9 +3,9 @@
   padding-bottom: 60px;
 }
 
-// @media screen and (min-width: 1200px) {
-//   .section {
-//     padding-top: 94px;
-//     padding-bottom: 94px;
-//   }
-// }
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
