--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -1,53 +1,58 @@
-// .social-list {
-//   display: flex;
-//   justify-content: space-between;
-// }
+.social-list {
+  display: flex;
+  // justify-content: space-between;
+  justify-content: center;
+}
 
-// .social-list__link {
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   width: 44px;
-//   height: 44px;
-//   border-radius: 50%;
-//   background-color: var(--second-color);
-//   fill: #afb1b8;
+.social-list__item:not(:last-child) {
+  margin-right: 10px;
+}
 
-//   &:hover,
-//   &:focus {
-//     fill: var(--second-color);
-//     background-color: var(--accent-color);
-//     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-//       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   }
-// }
+.social-list__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: var(--second-color);
+  fill: #afb1b8;
 
-// .social-list__icon {
-//   width: 20px;
-//   height: 20px;
-// }
+  &:hover,
+  &:focus {
+    fill: var(--second-color);
+    background-color: var(--accent-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
 
-// .join {
-//   display: flex;
-//   flex-direction: column;
-//   margin-right: 93px;
-// }
+.social-list__icon {
+  width: 20px;
+  height: 20px;
+}
 
-// .join__icon {
-//     fill: var(--second-color);
-//   }
+.join {
+  display: flex;
+  flex-direction: column;
+  margin-right: 93px;
+}
 
-// .join__list {
-//   display: flex;
-// }
+.join__icon {
+  fill: var(--second-color);
+}
 
-// .join__link {
-//   background-color: rgba(255, 255, 255, 0.1);
-//   margin-right: 10px;
+.join__list {
+  display: flex;
+}
 
-//   &:hover,
-//   &:focus {
-//     background-color: var(--accent-color);
-//     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   }
-// }
+.join__link {
+  background-color: rgba(255, 255, 255, 0.1);
+  margin-right: 10px;
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
