--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -1,40 +1,54 @@
-// .client__title {
-//   margin-bottom: 50px;
+.client__title {
+  margin-bottom: 30px;
+  // margin-bottom: 50px;
 
-//   text-align: center;
-//   font-style: normal;
-//   font-weight: 700;
-//   @include font(36px, 1.17, 0.03em);
-//   color: var(--main-color);
-// }
+  text-align: center;
+  font-style: normal;
+  font-weight: 700;
+  @include font(33px, 1.18, 0.03em);
 
-// .client__list {
-//   display: flex;
-// }
+  // @include font(36px, 1.17, 0.03em);
+  color: var(--main-color);
+}
 
+.client__list {
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  // display: flex;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+.client__item {
+  // width: calc((100% - 2 * 30px) / 2);
+  margin-left: 30px;
+  margin-top: 30px;
+}
 // .client__item:not(:last-child) {
 //   margin-right: 30px;
 // }
 
-// .client__link {
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   width: 170px;
-//   height: 92px;
-//   border: 1px solid #afb1b8;
-//   border-radius: 4px;
-//   color: #afb1b8;
+.client__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 210px;
+  // width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  color: #afb1b8;
 
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//     border: 1px solid var(--accent-color);
-//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   }
-// }
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    border: 1px solid var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
 
-// .client__icon {
-//   align-items: center;
-//   fill: currentColor;
-// }
+.client__icon {
+  align-items: center;
+  fill: currentColor;
+}
