--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,37 +1,66 @@
-// .features__list {
-//   display: flex;
-// }
+@media screen and (min-width: 768px) {
+  .features__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+}
 
-// .features__container {
-//   padding: 25px 100px;
-//   margin-bottom: 30px;
-//   background-color: #f5f4fa;
-//   border-radius: 4px;
-// }
+.features__container {
+  text-align: center;
+  padding: 25px 0px;
+  margin-bottom: 30px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+}
 
-// .features__icon {
-//   width: 70px;
-//   height: 70px;
-// }
+.features__icon {
+  width: 70px;
+  height: 70px;
+}
 
-// .features__item:not(:last-child) {
-//   margin-right: 30px;
-// }
+@media screen and (min-width: 768px) {
+  .features__item {
+    width: calc((100% - 2 * 30px) / 2);
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+}
 
-// .features__subtitle {
-//   margin-bottom: 10px;
+@media screen and (min-width: 1200px) {
+  .features__item {
+    width: calc((100% - 4 * 30px) / 4);
+  }
+}
 
-//   font-family: var(--main-font);
-//   font-weight: 700;
-//   @include font(14px, 1.14, 0.03em);
-//   text-transform: uppercase;
-//   color: var(--main-color);
-// }
+.features__subtitle {
+  text-align: center;
+  margin-bottom: 10px;
 
-// .features__text {
-//   margin-top: 0;
-//   margin-bottom: 0;
+  font-family: var(--main-font);
+  font-weight: 700;
+  @include font(14px, 1.14, 0.03em);
+  text-transform: uppercase;
+  color: var(--main-color);
+}
 
-//   font-family: var(--main-font);
-//   @include font(14px, 1.71, 0.03em);
-// }
+@media screen and (min-width: 768px) {
+  .features__subtitle {
+    text-align: start;
+  }
+}
+
+.features__text {
+  margin-top: 0;
+  margin-bottom: 30px;
+
+  font-family: var(--main-font);
+  @include font(14px, 1.71, 0.03em);
+}
+
+@media screen and (min-width: 768px) {
+  .features__text {
+    margin-bottom: 0;
+  }
+}
