--- a/sass/layout/_filter-menu.scss
+++ b/sass/layout/_filter-menu.scss
@@ -1,48 +1,48 @@
-// .filter__menu {
-//   display: flex;
-//   justify-content: center;
-//   margin-bottom: 50px;
-// }
+.filter__menu {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
 
-// .filter__item {
-//   margin-right: 8px;
-// }
+.filter__item {
+  margin-right: 8px;
+}
 
-// .filter__btn {
-//   background-color: #f5f4fa;
-//   text-align: center;
-//   font-family: inherit;
-//   font-weight: 500;
-//   @include font(16px, 1.63, 0.03em);
-//   color: var(--main-color);
-//   cursor: pointer;
+.filter__btn {
+  background-color: #f5f4fa;
+  text-align: center;
+  font-family: inherit;
+  font-weight: 500;
+  @include font(16px, 1.63, 0.03em);
+  color: var(--main-color);
+  cursor: pointer;
 
-//   padding: 6px 22px;
-//   border: none;
-//   background: #f5f4fa;
-//   border-radius: 4px;
+  padding: 6px 22px;
+  border: none;
+  background: #f5f4fa;
+  border-radius: 4px;
 
-//   &.current {
-//     text-align: center;
-//     background: var(--accent-color);
-//     font-family: inherit;
-//     font-weight: 500;
-//     @include font(16px, 1.63, 0.03em);
-//     color: var(--second-color);
+  &.current {
+    text-align: center;
+    background: var(--accent-color);
+    font-family: inherit;
+    font-weight: 500;
+    @include font(16px, 1.63, 0.03em);
+    color: var(--second-color);
 
-//     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-//       0px 2px 2px rgba(0, 0, 0, 0.12);
-//     border-radius: 4px;
-//   }
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+  }
 
-//   &:hover,
-//   &:focus {
-//     background-color: var(--accent-color);
-//     color: var(--second-color);
-//     box-sizing: border-box;
-//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-//       1px 4px 6px rgba(0, 0, 0, 0.16);
-//     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-//       color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   }
-// }
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    color: var(--second-color);
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
