--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,90 +1,90 @@
-// .header {
-//   padding-top: 24px;
-//   padding-bottom: 25px;
-// }
+.header {
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
 
-// .header__container {
-//   display: flex;
-//   align-items: center;
-// }
+.header__container {
+  display: flex;
+  align-items: center;
+}
 
-// .header__box {
-//   border-bottom-width: 1px;
-//   border-bottom-style: solid;
-//   border-bottom-color: #ececec;
-// }
+.header__box {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #ececec;
+}
 
-// .navigation {
-//   display: flex;
-//   align-items: center;
-// }
+.navigation {
+  display: flex;
+  align-items: center;
+}
 
-// .menu {
-//   display: flex;
-// }
+.menu {
+  display: flex;
+}
 
-// .menu__item:not(:last-child) {
-//   position: relative;
-//   margin-right: 50px;
-// }
+.menu__item:not(:last-child) {
+  position: relative;
+  margin-right: 50px;
+}
 
-// .menu__link {
-//   font-family: var(--main-font);
-//   font-weight: 500;
-//   @include font(14px, 1.14, 0.02em);
+.menu__link {
+  font-family: var(--main-font);
+  font-weight: 500;
+  @include font(14px, 1.14, 0.02em);
 
-//   color: var(--main-color);
+  color: var(--main-color);
 
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   }
-// }
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
 
-// .menu__link.current {
-//   color: var(--accent-color);
+.menu__link.current {
+  color: var(--accent-color);
 
-//   &::after {
-//     content: '';
-//     position: absolute;
-//     display: block;
-//     width: 100%;
-//     height: 4px;
-//     margin-top: 29px;
-//     background-color: var(--accent-color);
-//     border-radius: 2px;
-//   }
-// }
+  &::after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 4px;
+    margin-top: 29px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+  }
+}
 
-// .header__contact-list {
-//   display: flex;
-//   margin-left: auto;
-// }
+.header__contact-list {
+  display: flex;
+  margin-left: auto;
+}
 
-// .header__contat-item:not(:last-child) {
-//   margin-right: 50px;
-// }
+.header__contat-item:not(:last-child) {
+  margin-right: 50px;
+}
 
-// .header__contact-link {
-//   display: flex;
-//   align-items: center;
-//   margin-right: 30px;
+.header__contact-link {
+  display: flex;
+  align-items: center;
+  margin-right: 30px;
 
-//   font-family: var(--main-font);
-//   font-weight: 500;
-//   @include font(14px, 1.14, 0.02em);
+  font-family: var(--main-font);
+  font-weight: 500;
+  @include font(14px, 1.14, 0.02em);
 
-//   color: #757575;
+  color: #757575;
 
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   }
-// }
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
 
-// .header__contact-icon {
-//   margin-right: 10px;
-//   fill: currentColor;
-// }
+.header__contact-icon {
+  margin-right: 10px;
+  fill: currentColor;
+}
