--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,8 +1,7 @@
 .hero {
   max-width: 480px;
-  height: 400px;
-  padding: 60px 0;
-  //   margin: 0 auto;
+  padding: 118px 0;
+  margin: 0 auto;
   background-position: center;
   align-items: center;
   background-color: #2f303a;
@@ -11,20 +10,21 @@
   background-size: cover;
 }
 
-// .hero {
-//   max-width: 1600px;
-//   padding: 200px 0;
-//   margin: 0 auto;
-//   background-position: center;
-//   align-items: center;
-//   background-color: #2f303a;
-//   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-//     url(../images/hero/hero.jpg);
-//   background-size: cover;
-// }
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    padding: 200px 0;
+  }
+}
 
 .hero__title {
-  //   margin-bottom: 30px;
+  margin-bottom: 30px;
 
   text-align: center;
   font-family: var(--main-font);
@@ -35,47 +35,32 @@
   color: var(--second-color);
 }
 
-// @media screen and (min-width: 1200px) {
-//   .hero__title {
-//     margin-bottom: 30px;
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    @include font(44px, 1.36, 0.06em);
+  }
+}
 
-//     text-align: center;
-//     font-family: var(--main-font);
-//     font-weight: 900;
-//     @include font(44px, 1.36, 0.06em);
-//     text-transform: uppercase;
-//     color: var(--second-color);
-//   }
-// }
+.modal-btn {
+  padding: 10px 32px;
+  border-radius: 4px;
+  border: none;
+  margin: auto;
 
-//   @include font(44px, 1.36, 0.06em);
+  display: flex;
+  align-items: center;
+  text-align: center;
+  background: var(--accent-color);
 
-// @mixin font($fs: 14px, $lh: 1.71, $ls: 0.03em) {
-//   font-size: $fs;
-//   line-height: $lh;
-//   letter-spacing: $ls;
-// }
+  font-family: inherit;
+  font-weight: 700;
+  @include font(16px, 1.88, 0.06em);
+  color: var(--second-color);
+  cursor: pointer;
 
-// .modal-btn {
-//   padding: 10px 32px;
-//   border-radius: 4px;
-//   border: none;
-//   margin: auto;
-
-//   display: flex;
-//   align-items: center;
-//   text-align: center;
-//   background: var(--accent-color);
-
-//   font-family: inherit;
-//   font-weight: 700;
-//   @include font(16px, 1.88, 0.06em);
-//   color: var(--second-color);
-//   cursor: pointer;
-
-//   &:hover,
-//   &:focus {
-//     background-color: var(--background-color);
-//     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   }
-// }
+  &:hover,
+  &:focus {
+    background-color: var(--background-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
