--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,54 +1,92 @@
-// .team {
-//   background-color: #f5f4fa;
-// }
+.team {
+  background-color: #f5f4fa;
+}
 
-// .team__title {
-//   margin-bottom: 50px;
+.team__title {
+  margin-bottom: 30px;
 
-//   text-align: center;
-//   font-family: var(--main-font);
-//   font-weight: 700;
-//   @include font(36px, 1.17, 0.03em);
+  text-align: center;
+  font-family: var(--main-font);
+  font-weight: 700;
+  @include font(28px, 1.18, 0.03em);
 
-//   color: var(--main-color);
-// }
+  color: var(--main-color);
+}
 
-// .team__list {
-//   display: flex;
-//   flex-wrap: wrap;
-//   flex-basis: calc((100% - 120px) / 4);
-//   margin-left: -30px;
-//   margin-top: -30px;
-// }
+@media screen and (min-width: 1200px) {
+  .team__title {
+    margin-bottom: 50px;
+    @include font(36px, 1.17, 0.03em);
+  }
+}
 
-// .team__item {
-//   margin-left: 30px;
-//   margin-top: 30px;
-//   background: #ffffff;
-//   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-//     0px 2px 1px rgba(0, 0, 0, 0.2);
-//   border-radius: 0px 0px 4px 4px;
-// }
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: flex;
+    flex-wrap: wrap;
 
-// .team__container {
-//   padding: 30px 32px;
-// }
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+}
 
-// .team__player {
-//   margin-bottom: 10px;
+.team__item {
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
 
-//   text-align: center;
-//   font-family: var(--main-font);
-//   font-weight: 500;
-//   @include font(16px, 1.19, 0.03em);
+@media screen and (max-width: 767px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
 
-//   color: var(--main-color);
-// }
+@media screen and (min-width: 768px) {
+  .team__item {
+    flex-basis: calc((100% - 2 * 30px) / 2);
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+}
 
-// .team__position {
-//   margin-bottom: 16px;
+@media screen and (min-width: 1200px) {
+  .team__item {
+    flex-basis: calc((100% - 4 * 30px) / 4);
+  }
+}
 
-//   text-align: center;
-//   font-family: var(--main-font);
-//   @include font(16px, 1.19, 0.03em);
-// }
+.team__img {
+  width: 100%;
+}
+
+.team__container {
+  padding-top: 30px;
+  padding-bottom: 24px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team__container {
+    padding: 30px 32px;
+  }
+}
+
+.team__player {
+  margin-bottom: 10px;
+
+  text-align: center;
+  font-family: var(--main-font);
+  font-weight: 500;
+  @include font(16px, 1.19, 0.03em);
+
+  color: var(--main-color);
+}
+
+.team__position {
+  margin-bottom: 16px;
+
+  text-align: center;
+  font-family: var(--main-font);
+  @include font(16px, 1.19, 0.03em);
+}
