--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,47 +1,47 @@
-// .work {
-//   padding-top: 0;
-// }
+.work {
+  padding-top: 0;
+}
 
-// .work__title {
-//   margin-bottom: 50px;
+.work__title {
+  margin-bottom: 50px;
 
-//   text-align: center;
-//   font-family: var(--main-font);
-//   font-weight: 700;
-//   @include font(36px, 1.17, 0.03em);
+  text-align: center;
+  font-family: var(--main-font);
+  font-weight: 700;
+  @include font(36px, 1.17, 0.03em);
 
-//   color: var(--main-color);
-// }
+  color: var(--main-color);
+}
 
-// .work__list {
-//   display: flex;
-//   margin-left: -30px;
-//   margin-top: -30px;
-// }
+.work__list {
+  display: flex;
+  margin-left: -30px;
+  margin-top: -30px;
+}
 
-// .work__item {
-//   position: relative;
+.work__item {
+  position: relative;
 
-//   flex-basis: calc((100% - 90px) / 3);
-//   margin-left: 30px;
-//   margin-top: 30px;
-// }
+  flex-basis: calc((100% - 90px) / 3);
+  margin-left: 30px;
+  margin-top: 30px;
+}
 
-// .work__subtitle {
-//   position: absolute;
-//   width: 100%;
-//   height: 70px;
-//   left: 0;
-//   bottom: 0;
-//   padding-top: 27px;
-//   padding-bottom: 27px;
+.work__subtitle {
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  left: 0;
+  bottom: 0;
+  padding-top: 27px;
+  padding-bottom: 27px;
 
-//   text-align: center;
-//   font-weight: 700;
-//   @include font(14px, 1.14, 0.03em);
+  text-align: center;
+  font-weight: 700;
+  @include font(14px, 1.14, 0.03em);
 
-//   text-transform: uppercase;
+  text-transform: uppercase;
 
-//   background-color: rgba(47, 48, 58, 0.8);
-//   color: var(--second-color);
-// }
+  background-color: rgba(47, 48, 58, 0.8);
+  color: var(--second-color);
+}
