--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,12 +5,33 @@
 }
 
 .footer__container {
-  display: flex;
   align-items: baseline;
 }
 
+@media screen and (min-width: 768px) {
+  .footer__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+  }
+}
+
 .footer__address {
-  margin-right: 70px;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__address {
+    text-align: inherit;
+    margin-right: 70px;
+  }
 }
 
 .footer__title {
@@ -32,6 +53,16 @@
   font-style: normal;
   @include font(14px, 1.71, 0.03em);
   color: var(--second-color);
+}
+
+.address__list {
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .address__list {
+    margin-bottom: 0;
+  }
 }
 
 .address__item:not(:last-child) {
