--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,21 +1,30 @@
 .footer-form {
   display: block;
+  text-align: center;
 }
 
 .footer-form__head {
   margin-bottom: 20px;
+
+  text-align: center;
   font-weight: 700;
   @include font(14px, 1.14, 0.03em);
-
   text-transform: uppercase;
 
   color: var(--second-color);
 }
 
+@media screen and (min-width: 1200px) {
+  .footer-form__head {
+    text-align: start;
+  }
+}
+
 .footer-form__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
+  margin-bottom: 20px;
 
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -33,9 +42,16 @@
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .footer-form__input {
+    width: 358px;
+    margin-bottom: 0;
+  }
+}
+
 .footer-form__btn {
   padding: 10px 29px;
-  margin-left: 12px;
+
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -46,6 +62,12 @@
   @include font(16px, 1.88, 0.06em);
 
   color: var(--second-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form__btn {
+    margin-left: 12px;
+  }
 }
 
 .footer-form__icon {
