--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,14 +1,43 @@
 .header {
   padding-top: 10px;
   padding-bottom: 10px;
-  // padding-top: 24px;
-  // padding-bottom: 25px;
 }
 
-.header__container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__container {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .header__box {
@@ -17,15 +46,24 @@
   border-bottom-color: #ececec;
 }
 
-// .navigation {
-//   display: flex;
-//   align-items: center;
-// }
+@media screen and (min-width: 768px) {
+  .navigation {
+    display: flex;
+    align-items: center;
+    margin-right: 84px;
+  }
+}
 
 .menu {
   display: none;
-  // display: flex;
 }
+
+@media screen and (min-width: 768px) {
+  .menu {
+    display: flex;
+  }
+}
+
 .burger-btn {
   background-color: transparent;
   border: none;
@@ -39,6 +77,17 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
+}
+
+.burger-btn__icon:hover,
+.burger-btn__icon:focus {
+  fill: var(--accent-color);
+}
+
 .mobile-menu {
   position: fixed;
   z-index: 100;
@@ -47,23 +96,149 @@
   width: 100vw;
   height: 100vh;
   background-color: var(--second-color);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &__container {
+    position: relative;
+    padding: 48px 40px;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  &__btn {
+    position: absolute;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+  }
+
+  &__icon {
+    width: 40px;
+    height: 40px;
+  }
 }
 
-.mobile-menu__container {
-  position: relative;
+.mobile-menu__icon:hover,
+.mobile-menu__icon:focus {
+  fill: var(--accent-color);
 }
 
-.mobile-menu__btn {
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.mobile-menu__close-btn {
   position: absolute;
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  line-height: 0;
+  top: 10px;
+  right: 15px;
 }
 
-.mobile-menu__icon {
-  width: 40px;
-  height: 40px;
+.nav-list {
+  margin-bottom: 200px;
+}
+
+.nav-list__item {
+  margin-bottom: 32px;
+}
+
+.nav-list__link {
+  font-weight: 500;
+  @include font(34px, 1.18, 0.02em);
+  color: var(--main-color);
+}
+
+@media screen and (min-width: 380px) {
+  .nav-list__link {
+    font-size: 40px;
+  }
+}
+
+.nav-list__link.current {
+  color: var(--accent-color);
+}
+
+.contact {
+  margin-bottom: 64px;
+}
+
+.contact__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.contact__link.current {
+  font-weight: 500;
+  @include font(26px, 1.18, 0.02em);
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 380px) {
+  .contact__link.current {
+    font-size: 34px;
+  }
+}
+
+.contact__link {
+  font-weight: 500;
+  @include font(20px, 1.17, 0.02em);
+  color: inherit;
+}
+
+@media screen and (min-width: 380px) {
+  .contact__link {
+    font-size: 24px;
+  }
+}
+
+.social-menu {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+@media screen and (min-width: 410px) {
+  .social-menu {
+    flex-direction: row;
+  }
+}
+
+.social-menu__item {
+  position: relative;
+  margin-bottom: 8px;
+}
+
+@media screen and (min-width: 410px) {
+  .social-menu__item {
+    margin-right: 20px;
+  }
+}
+
+.social-menu__link {
+  font-weight: 500;
+  @include font(18px, 1.22, 0.02em);
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 410px) {
+  .menu-line::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    right: -10px;
+
+    height: 100%;
+    width: 1px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+  }
 }
 
 .menu__item:not(:last-child) {
@@ -102,22 +277,35 @@
 
 .header__contact-list {
   display: none;
-  // display: flex;
-  // margin-left: auto;
 }
 
-.header__contat-item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 768px) {
+  .header__contact-list {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__contact-list {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+.header__contact-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .header__contact-link {
   display: flex;
   align-items: center;
-  margin-right: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 
   font-family: var(--main-font);
   font-weight: 500;
-  @include font(14px, 1.14, 0.02em);
+  @include font(12px, 1.17, 0.02em);
 
   color: #757575;
 
@@ -125,6 +313,13 @@
   &:focus {
     color: var(--accent-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__contact-link {
+    padding: 0;
+    @include font(14px, 1.14, 0.02em);
   }
 }
 
