--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -20,6 +20,12 @@
 }
 @media screen and (min-width: 768px) {
   .logo__header {
+    margin-right: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo__header {
     margin-right: 93px;
   }
 }
