--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -6,19 +6,28 @@
 .modal-form__head {
   margin-bottom: 12px;
   font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
+  @include font(15px, 1.5, 0.03em);
   text-align: center;
-  letter-spacing: 0.03em;
 
   color: var(--main-color);
 }
 
+@media screen and (min-width: 480px) {
+  .modal-form__head {
+    font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form__head {
+    @include font(20px, 1.15, 0.03em);
+  }
+}
+
 .modal-form__field {
   margin-bottom: 10px;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
+
+  @include font(12px, 1.17, 0.01em);
 }
 
 .modal-form__wrapper {
@@ -107,10 +116,35 @@
   justify-content: center;
   margin-top: 10px;
   margin-bottom: 30px;
-  @include font(14px, 1.71, 0.03em);
+  @include font(7px, 1.17, 0.03em);
+}
+
+@media screen and (min-width: 340px) {
+  .modal-form__accept {
+    @include font(12px, 1.17, 0.03em);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form__accept {
+    @include font(14px, 1.71, 0.03em);
+  }
 }
 
 .modal-form__link {
-  @include font(14px, 1.71, 0.03em);
+  @include font(7px, 1.17, 0.03em);
+
   color: var(--accent-color);
+}
+
+@media screen and (min-width: 340px) {
+  .modal-form__link {
+    @include font(12px, 1.17, 0.03em);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form__link {
+    @include font(14px, 1.71, 0.03em);
+  }
 }
