--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,13 +1,27 @@
 .modal {
   position: absolute;
-  width: 528px;
-  height: 581px;
+  width: 100vw;
+  height: 100vh;
   padding: 40px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
 
   background-color: var(--second-color);
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .close-btn {
