--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -61,7 +61,7 @@
   left: 0;
   top: 0;
   padding: 63px 24px;
-  overflow: auto;
+  overflow: hidden;
   transform: translatey(105%);
 
   font-style: normal;
